# OldiesRules

./: Cargo.toml  README.md
crates/auto-rs/: Cargo.toml
crates/auto-rs/src/: lib.rs
crates/brian-rs/: Cargo.toml
crates/brian-rs/src/: lib.rs
crates/copasi-rs/: Cargo.toml
crates/copasi-rs/src/: lib.rs
crates/genesis-rs/: Cargo.toml
crates/genesis-rs/src/: lib.rs
crates/modeldb-rs/: Cargo.toml
crates/modeldb-rs/src/: lib.rs
crates/nest-rs/: Cargo.toml
crates/nest-rs/src/: lib.rs
crates/neuron-rs/: Cargo.toml
crates/neuron-rs/src/: lib.rs
crates/oldies-cli/: Cargo.toml
crates/oldies-cli/src/: main.rs
crates/oldies-core/: Cargo.toml
crates/oldies-core/src/: lib.rs
crates/oldies-gui/: Cargo.toml
crates/oldies-gui/src/: main.rs
crates/xppaut-rs/: Cargo.toml
crates/xppaut-rs/src/: lib.rs
