[workspace]
resolver = "2"
members = [
    # Revival of legacy simulators
    "crates/genesis-rs",      # GENESIS simulator revival
    "crates/xppaut-rs",       # XPPAUT bifurcation analysis
    "crates/auto-rs",         # AUTO continuation (FORTRAN)
    "crates/modeldb-rs",      # ModelDB model importer
    "crates/neuron-rs",       # NEURON simulator (HOC/NMODL)
    "crates/copasi-rs",       # COPASI/SBML biochemical networks
    "crates/brian-rs",        # Brian spiking network simulator
    "crates/nest-rs",         # NEST simulator interface

    # Common infrastructure
    "crates/oldies-core",     # Shared types and utilities
    "crates/oldies-cli",      # Command-line interface
    "crates/oldies-gui",      # Graphical interface
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina <pako.molina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yatrogenesis/OldiesRules"
keywords = ["neuroscience", "simulation", "legacy", "genesis", "xppaut"]
categories = ["science", "simulation", "mathematics"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Numerical
ndarray = { version = "0.16", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-traits = "0.2"
num-complex = "0.4"

# ODE solvers
ode_solvers = "0.5"

# Parallel
rayon = "1.10"

# Parsing (for legacy formats)
pest = "2.7"
pest_derive = "2.7"
nom = "7.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }
egui_plot = "0.29"
rfd = "0.15"

# Internal
oldies-core = { version = "0.1.0", path = "crates/oldies-core" }
oldies-genesis = { version = "0.1.0", path = "crates/genesis-rs" }
oldies-xppaut = { version = "0.1.0", path = "crates/xppaut-rs" }
oldies-auto = { version = "0.1.0", path = "crates/auto-rs" }
oldies-modeldb = { version = "0.1.0", path = "crates/modeldb-rs" }
oldies-neuron = { version = "0.1.0", path = "crates/neuron-rs" }
oldies-copasi = { version = "0.1.0", path = "crates/copasi-rs" }
oldies-brian = { version = "0.1.0", path = "crates/brian-rs" }
oldies-nest = { version = "0.1.0", path = "crates/nest-rs" }

[profile.release]
opt-level = 3
lto = "thin"
