[package]
name = "oldies-auto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AUTO continuation algorithm revival in Rust - Numerical bifurcation analysis"

[dependencies]
oldies-core = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
