[package]
name = "brian-rs"
version.workspace = true
edition.workspace = true
description = "Brian spiking neural network simulator revival"
keywords = ["neuroscience", "brian", "spiking", "neural", "simulation"]
categories = ["science", "simulation"]

[dependencies]
oldies-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true
rayon.workspace = true

[dev-dependencies]
