[package]
name = "copasi-rs"
version.workspace = true
edition.workspace = true
description = "COPASI/SBML biochemical network simulator revival"
keywords = ["copasi", "sbml", "biochemistry", "simulation", "systems-biology"]
categories = ["science", "simulation", "parsing"]

[dependencies]
oldies-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
