[package]
name = "oldies-copasi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "COPASI/SBML biochemical network simulator revival in Rust"

[dependencies]
oldies-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
