[package]
name = "modeldb-rs"
version.workspace = true
edition.workspace = true
description = "ModelDB model importer for legacy neural models"

[dependencies]
oldies-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
