[package]
name = "nest-rs"
version.workspace = true
edition.workspace = true
description = "NEST simulator revival - large-scale spiking networks"
keywords = ["neuroscience", "nest", "spiking", "neural", "simulation"]
categories = ["science", "simulation"]

[dependencies]
oldies-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true
rayon.workspace = true

[dev-dependencies]
