[package]
name = "oldies-nest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NEST simulator revival in Rust - Large-scale spiking neural networks"

[dependencies]
oldies-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true
rayon.workspace = true

[dev-dependencies]
