[package]
name = "neuron-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NEURON simulator revival in Rust - HOC and NMODL parsers for cable equation modeling"

[dependencies]
oldies-core.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
ndarray.workspace = true
thiserror.workspace = true

[dev-dependencies]
