[package]
name = "oldies-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive CLI for OldiesRules - Run legacy simulators with modern UX"

[[bin]]
name = "oldies"
path = "src/main.rs"

[dependencies]
# Core crates
oldies-core = { workspace = true }
genesis-rs = { workspace = true }
xppaut-rs = { workspace = true }
auto-rs = { workspace = true }
brian-rs = { workspace = true }
neuron-rs = { workspace = true }
copasi-rs = { workspace = true }
nest-rs = { workspace = true }

# CLI
clap = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
