[package]
name = "oldies-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive CLI for OldiesRules - Run legacy simulators with modern UX"

[[bin]]
name = "oldies"
path = "src/main.rs"

[dependencies]
# Core crates
oldies-core = { workspace = true }
oldies-genesis = { workspace = true }
oldies-xppaut = { workspace = true }
oldies-auto = { workspace = true }
oldies-brian = { workspace = true }
oldies-neuron = { workspace = true }
oldies-copasi = { workspace = true }
oldies-nest = { workspace = true }

# CLI
clap = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
