[package]
name = "oldies-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Modern GUI for OldiesRules - Real-time visualization with egui"

[[bin]]
name = "oldies-gui"
path = "src/main.rs"

[dependencies]
# Core crates
oldies-core = { workspace = true }
oldies-genesis = { workspace = true }
oldies-xppaut = { workspace = true }
oldies-auto = { workspace = true }
oldies-brian = { workspace = true }
oldies-neuron = { workspace = true }
oldies-copasi = { workspace = true }
oldies-nest = { workspace = true }

# GUI
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
rfd = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
