[package]
name = "xppaut-rs"
version.workspace = true
edition.workspace = true
description = "XPPAUT bifurcation analysis revival in Rust"

[dependencies]
oldies-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-complex = { workspace = true }
