[package]
name = "oldies-xppaut"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "XPPAUT bifurcation analysis revival in Rust - Hopf detection, phase portraits"

[dependencies]
oldies-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-complex = { workspace = true }
